# longest-word

./: pyproject.toml
src/longest_word/: game.py
tests/: test_game.py
