[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Steven Uaem <steven.uaem@outlook.com>"]
packages = [{ include = "longest_word", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pylint = "^3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

